# metal-live-scene-analytics-deploy

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ingestion/: _env.py  build_marts.py  ingest_kaggle.py  ingest_setlistfm.py
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 01_temporal.py  02_geographic.py  03_songs.py  04_reviews.py  05_seasonality.py  06_country_genre.py  07_genre_lifecycle.py  08_career_shapes.py  09_band_explorer.py  10_venue_map.py
streamlit_app/utils/: charts.py  db.py
